--- a/TeamProject/pom.xml
+++ b/TeamProject/pom.xml
@@ -22,6 +22,13 @@
     <version>2.5.4</version>
 </dependency>
 
+<!-- 에이잭스 -->
+<dependency>
+    <groupId>org.aspectj</groupId>
+    <artifactId>aspectjweaver</artifactId>
+    <version>1.6.10</version>
+</dependency>
+
 <!-- 마이바티스 -->
 <dependency>
     <groupId>org.mybatis</groupId>
