--- a/TeamProject/src/main/webapp/WEB-INF/web.xml
+++ b/TeamProject/src/main/webapp/WEB-INF/web.xml
@@ -30,4 +30,30 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
+	<!-- encoding --> <!-- 요청에 대한 한글 처리, 응답X -->
+	<filter>
+		<filter-name>encoding</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>utf-8</param-value>
+		</init-param>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>encoding</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+	<!-- hidden method : (수정)put, (삭제)delete 용 -->
+	<filter>
+		<filter-name>hiddenMethodFilter</filter-name>
+		<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter
+		</filter-class>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>hiddenMethodFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
