--- a/TeamProject/pom.xml
+++ b/TeamProject/pom.xml
@@ -108,6 +108,13 @@
     <version>1.5.6</version>
 </dependency>
 
+<dependency>
+    <groupId>com.googlecode.json-simple</groupId>
+    <artifactId>json-simple</artifactId>
+    <version>1.1.1</version>
+</dependency>
+
+
 
 	
 		<!-- Spring -->
