--- a/TeamProject/pom.xml
+++ b/TeamProject/pom.xml
@@ -114,6 +114,12 @@
     <version>1.1.1</version>
 </dependency>
 
+<!-- 부트스트랩 datepicker -->
+<dependency>
+    <groupId>org.webjars</groupId>
+    <artifactId>bootstrap-datepicker</artifactId>
+    <version>1.9.0</version>
+</dependency>
 
 
 	
